--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
     "dev": "NODE_ENV=test PORT=3005 nodemon server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-rate-limit": "^5.0.0",
-    "helmet": "^3.21.1",
-    "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.17.1"
+    "swagger-ui-express": "^4.1.2",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.3"
